[gd_scene load_steps=3 format=3 uid="uid://cidf5bgyfhq7l"]

[ext_resource type="Script" uid="uid://blb2ypcou3gal" path="res://help.gd" id="1_37kl0"]
[ext_resource type="Script" uid="uid://l5jkdxm4x4k5" path="res://text_render.gd" id="3_6uqi0"]

[node name="Help" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_6uqi0")

[node name="Left" type="Button" parent="."]
offset_left = 289.0
offset_top = 398.0
offset_right = 341.0
offset_bottom = 451.0
text = "<"
script = ExtResource("1_37kl0")

[node name="Right" type="Button" parent="."]
offset_left = 361.0
offset_top = 399.0
offset_right = 413.0
offset_bottom = 452.0
text = ">"

[node name="Backspace" type="Button" parent="."]
offset_left = 430.0
offset_top = 397.0
offset_right = 482.0
offset_bottom = 450.0
text = "<-"

[connection signal="pressed" from="Left" to="Control" method="_on_left_btn_pressed"]
[connection signal="pressed" from="Right" to="Control" method="_on_right_btn_pressed"]
[connection signal="pressed" from="Backspace" to="Control" method="_on_backspace_btn_pressed"]
